tests/codegen-anf/pass/019-postinc-int.hyg
let mutable x = 1;
let y = x ++;

assert(y = 1);
assert(x = 2)
