tests/codegen-anf/fail/011-c-style-comp-assign.hyg
let mutable a = 10;
assert((a += 1) = 10) // not true - I have no better ideas